Implement candidate retrieval and stream state management; add advanced demo and memory inspector